--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-aspect-ratio": "^1.0.5",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "google-charts": "^2.0.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
   },
